ui: use literal commas and periods in accelerators on Mac

That is, accelerators should read ",", not "Comma".

Bug: 867732
Change-Id: I7dec0af8475b420cbc4e793fecc823378b04f3ad
Reviewed-on: https://chromium-review.googlesource.com/1151649
Reviewed-by: Avi Drissman <avi@chromium.org>
Commit-Queue: Avi Drissman <avi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#578411}
Former-commit-id: f759a3174d17ee4d575f4937044349b8878ad655